Renombrando curso de integración cotinua

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <li>Varant</li>
         <li>Doker</li>
         <li>Ansible</li>
-        <li>Integración continua</li>
+        <li>Integración continua: Madurez y productividad en el desarrollo de software</li>
     </ul>
 </body>
 </html>
